# vision-tools

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/vision_core/core/configs/: captioning.yaml  pose_estimation.yaml
src/vision_core/core/tools/: base_tool.py  captioning.py  detection.py  embedder.py  pipeline.py  pose_estimation.py
src/vision_core/engine/: video_engine.py
src/vision_core/utils/: search.py  tracking.py
tests/tools/: test_captioning.py  test_detection.py  test_embedder.py  test_pose.py  test_utils.py
vision_tools/: dev_tests.ipynb
vision_tools/core/configs/: embedding.yaml  ov_detection.yaml  tracker.yaml
vision_tools/core/tools/: base_tool.py  captioning.py  detection.py  embedder.py  pipeline.py  pose_estimation.py
vision_tools/data/: vector_store.py
vision_tools/engine/: video_engine.py
vision_tools/utils/: image_utils.py  locations.py  plotting.py  serialization.py  types.py
