[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vision_tools"
version = "0.1.0"
description = "Core vision/ML tools and engine for video processing"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python-headless",
    "Pillow",
    "ultralytics==8.3.235",
    "transformers",
    "peft",
    "optimum",
    "optimum-intel[openvino]",
    "openvino",
    "ftfy",
    "regex",
    "pydantic",
    "pyyaml",
    "requests",
    "onnxslim",
    "onnxruntime",
    "supervision==0.26.1",
    "trackers==2.0.2rc0",
    "clip @ git+https://github.com/openai/CLIP.git",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["vision_tools"]
